fix: handle overflow in component

--- a/packages/core/src/components/dropdown/dropdown.scss
+++ b/packages/core/src/components/dropdown/dropdown.scss
@@ -20,3 +20,8 @@
 :host {
   min-width: 0px;
 }
+
+:host(.overflow) {
+  max-height: 40vh;
+  overflow-y: auto;
+}
